# mf.com

./: .gitignore  .python-version  Pipfile  README.md  pyproject.toml
scripts/: gen  ignore_files.txt  makesass  sasswatch  serve  sync
src/: _helpers.mako  _page.mako  _site.mako  cv.history.md  cv.html  cv.other.md  helpers.mako  home.do.md  home.do_aside.md  home.summary.md  home.summary_aside.md  home.work.md  humans.txt  index.html  keybase.txt  page.mako  site.mako
src/_sass/: colors.scss  cv.scss  home.scss  screen.scss
src/_sass/base/: _base.scss  _grid-settings.scss  _typography.scss  _variables.scss
src/css/: .gitignore  README.md  colors.css  cv.css  home.css  screen.css
src/cv/: cv.history.md  cv.other.md  cv.social.md  cv.social_fwmsn.md  cv.tech.md  cv.tech_skills.md  index.html  slowfood.md  social.html  tech.html
src/scss/: .gitignore  _layout.scss  _lists.scss  _typography.scss  _variables.scss  main.scss
